add more to jvm
modified